Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -252,23 +252,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "15.0"
-      ]
-     },
-     "execution_count": 90,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "SyntaxError",
+     "evalue": "unexpected EOF while parsing (<ipython-input-1-672eb5e0c986>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-672eb5e0c986>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    math.factorial(6)/(math.factorial(6-2)\u001b[0m\n\u001b[0m                                          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
+     ]
     }
    ],
    "source": [
     "import math\n",
-    "math.factorial(6)/(math.factorial(6-2)* math.factorial(2))"
+    "math.factorial(6)/(math.factorial(6-2)"
    ]
   },
   {
